crates/snapshot-tests/tests/snapshots/parser__bad_nesting__key_then_dotted.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateKey]: the key `a` is defined multiple times in table
  ┌─ key_then_dotted:3:10
  │
2 │         a = 1
  │         - first key instance
3 │         [a.b]
  │          ^ duplicate key


error: the key `a` is defined multiple times in table
 --> key_then_dotted:3:10
  |
2 |         a = 1
  |         - first key instance
3 |         [a.b]
  |          ^ duplicate key
Error {
    kind: "DuplicateKey",
    message: "duplicate key",
    span: 24..25,
    path: Some(
        "a",
    ),
}
